--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -57,16 +57,30 @@ Modules - reusable container thanks to https://github.com/CodyHouse, codyhouse.c
     h5,p {line-height: 2em;}
     p {font-size: 12px;}
     a {color: $color-white;}
+    div.content { 
 
-    div.content { @include column(.8);}
+        @include column(.8);
+        height: 80px;
+    }
     div.action { 
         @include column(.2);
         display:table;
-        height:100%;
         vertical-align:middle;
         overflow: hidden;
-        margin-top:10px;
-        a { @include button; @include border-radius(0px);}
+        height: 80px;
+        padding: 15px 0;
+        a {
+            text-align:center;
+            padding:15px 20px;
+            overflow:hidden;
+            display:table-cell;
+            background-color: $color-2;
+            text-decoration:none;
+            &:hover, &:active, &:focus {
+                @include transition(background .3s ease-in-out);
+                background-color: $color-2 - 10;
+            }
+        }
 
         @include MQ(XS) {
             @include clearfix;
