--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -68,7 +68,7 @@ Modules - reusable container thanks to https://github.com/CodyHouse, codyhouse.c
         vertical-align:middle;
         overflow: hidden;
         height: 80px;
-        padding: 15px 0;
+        padding: 15px;
         a {
             text-align:center;
             padding:15px 20px;
